1999-08-21  Richard frith-Macdonald <richard@brainstorm.co.uk>

	Added simple menu with 'quit' item for all test apps.

1999-07-30  Michael Hanni  <mhanni@sprintmail.com>

	* Several images for new popup in popupbuttons.app:
	animations.tiff appearance.tiff configs.tiff dock.tiff (images
	taken from Window Maker, I hope this is ok.)

1999-07-26  Michael Hanni  <mhanni@sprintmail.com>

	* GNUstepInstaller.m: copy of nstabview.m, save this app uses no
	tabs and has buttons in the TabView for movement through tabs,
	quite cool.
	* nstabview.m: added a delegate to the nstabview. Delegate
	responds to all selectors and gives debug information. In
	addition, with the delegate you cannot click on the "Natalie"
	tab, it is disabled.

1999-07-24  Michael Hanni  <mhanni@sprintmail.com>

	* gstextnetwork.m: new test app to test NSTextView/TextNetwork.
	* Edit/*: minor fixes to use NSText directly so for the time being
	Edit.app still works somewhat.

1999-07-10  Michael Hanni  <mhanni@sprintmail.com>

	* GSImageTabViewItem.m: new file to draw a subclass of
	NSTabViewItem that puts an image into a tab.
	* nstabview.m: changed "Me" tab to also include an image.
	* Smiley.tiff: image I drew to put in a tab.

1999-07-9  Michael Hanni  <mhanni@sprintmail.com>

	* nstabview.m: this is a must see. it really works quite well.